...

  render() {
    return (
      <View style={{ flexDirection: 'row' }}>
        <TouchableOpacity
          onPress={this.toggleDrawer.bind(this)}
          testID="navDrawerOpen"
        >
          <Image
            source={{
              uri:
                'https://cdn4.iconfinder.com/data/icons/general-office-solid-style/91/General_-_Office_30-512.png'
            }}
...
